@@ -21,11 +21,10 @@ import org.apache.lucene.analysis.Analyzer;
 import org.apache.lucene.analysis.TokenStream;
 import org.apache.lucene.analysis.core.WhitespaceAnalyzer;
 import org.apache.solr.SolrTestCaseJ4;
-import org.apache.solr.handler.component.HighlightComponent;
-import org.apache.solr.request.LocalSolrQueryRequest;
-import org.apache.solr.request.SolrQueryRequest;
-import org.apache.solr.util.*;
 import org.apache.solr.common.params.HighlightParams;
+import org.apache.solr.handler.component.HighlightComponent;
+import org.apache.solr.request.SolrQueryRequest;
+import org.apache.solr.util.TestHarness;
 import org.junit.After;
 import org.junit.BeforeClass;
 import org.junit.Test;
@@ -848,7 +847,7 @@ public class HighlighterTest extends SolrTestCaseJ4 {
   }
   
   public void testHlQParameter() {
-    assertU(adoc("title", "Apache Software Foundation", "id", "1"));
+    assertU(adoc("title", "Apache Software Foundation", "t_text", "apache software foundation", "id", "1"));
     assertU(commit());
     assertQ("hl.q parameter overrides q parameter", 
         req("q", "title:Apache", "hl", "true", "hl.fl", "title", "hl.q", "title:Software"),
@@ -858,6 +857,31 @@ public class HighlighterTest extends SolrTestCaseJ4 {
         req("q", "title:Apache", "hl", "true", "hl.fl", "title", "hl.q", "{!v=$qq}", "qq", "title:Foundation"),
         "//lst[@name='highlighting']/lst[@name='1']" +
         "/arr[@name='title']/str='Apache Software <em>Foundation</em>'");
+    assertQ("hl.q parameter uses localparam parser definition correctly",
+        req("q", "Apache", "defType", "edismax", "qf", "title t_text", "hl", "true", "hl.fl", "title", "hl.q", "{!edismax}Software"),
+        "//lst[@name='highlighting']/lst[@name='1']" +
+            "/arr[@name='title']/str='Apache <em>Software</em> Foundation'");
+    assertQ("hl.q parameter uses defType correctly",
+        req("q", "Apache", "defType", "edismax", "qf", "title t_text", "hl", "true", "hl.fl", "title", "hl.q", "Software"),
+        "//lst[@name='highlighting']/lst[@name='1']" +
+        "/arr[@name='title']/str='Apache <em>Software</em> Foundation'");
+    assertQ("hl.q parameter uses hl.qparser param correctly",
+        req("q", "t_text:Apache", "qf", "title t_text", "hl", "true", "hl.fl", "title", "hl.q", "Software", "hl.qparser", "edismax"),
+        "//lst[@name='highlighting']/lst[@name='1']" +
+            "/arr[@name='title']/str='Apache <em>Software</em> Foundation'");
+  }
+
+  public void testHlQEdismaxParameter() {
+    assertU(adoc("title", "Apache Software Foundation", "id", "1"));
+    assertU(commit());
+    assertQ("hl.q parameter overrides q parameter",
+        req("q", "title:Apache", "hl", "true", "hl.fl", "title", "hl.q", "{!edismax qf=title v=Software}"),
+        "//lst[@name='highlighting']/lst[@name='1']" +
+            "/arr[@name='title']/str='Apache <em>Software</em> Foundation'");
+    assertQ("hl.q parameter overrides q parameter",
+        req("q", "title:Apache", "hl", "true", "hl.fl", "title", "hl.q", "{!v=$qq}", "qq", "title:Foundation"),
+        "//lst[@name='highlighting']/lst[@name='1']" +
+            "/arr[@name='title']/str='Apache Software <em>Foundation</em>'");
   }
 
   @Test
